k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: incertotech-prod
  labels:
    name: incertotech-prod
    environment: prod
